--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-tbd
+
+<!doctype html>
+<html>
+    <head>
+        <title>FoodTakes</title>
+        <meta name="description" content="tbd messahe">
+    </head>
+
+    <body>
+        May or may not be coming 
+    </body>
+</html>
