--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>FoodTakes</title>
-        <meta name="description" content="tbd messahe">
+        <meta name="description" content="name?">
     </head>
 
     <body>
