--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        May or may not be coming \n
+        May or may not be coming <br>
         update by maggu's demand
     </body>
 </html>
